# yandex-iot-mcp

./: .gitignore  README.md  pyproject.toml
src/yandex_iot_mcp/: __init__.py  server.py
tests/: test_server.py
