[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-iot-mcp"
version = "0.1.1"
description = "MCP server for the Yandex Smart Home (IoT) API: list and control devices, run scenarios, power-cycle smart sockets"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sergey Subbotin", email = "ssubbotin@gmail.com" }]
requires-python = ">=3.10"
keywords = ["mcp", "yandex", "smart-home", "iot", "alice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ssubbotin/yandex-iot-mcp"

[project.scripts]
yandex-iot-mcp = "yandex_iot_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yandex_iot_mcp"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.21"]
